# reasearch-agent

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build-msi.sh
src/: index.html  main.ts
src-tauri/: Cargo.toml  config.yaml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  orchestrator.rs  types.rs
src-tauri/src/backends/: llm.rs
src-tauri/src/backends/search/: mod.rs  openalex.rs
src-tauri/src/modules/: mod.rs  query_decomposer.rs  ranker.rs  result_organizer.rs  search_engine.rs  tools.rs
